--- a/index.css
+++ b/index.css
@@ -86,6 +86,108 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+#matches {
+    position: absolute;
+    left: 25px;
+    top: 100px;
+}
+
+#matches p {
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.match {
+    height: 35px;
+    width: 360px;
+    margin-top: 20px;
+}
+
+.matchnumberdiv {
+    background-color: lightgray;
+    height: 35px;
+    width: 35px;
+    border-left: 3px solid #4c4c4c;
+    border-top: 3px solid #4c4c4c;
+    border-bottom: 3px solid #4c4c4c;
+    border-right: 3px solid #4c4c4c;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
+
+.matchnumber {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    margin-top: 7px;
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.bluealliancef {
+    background-color: #0066b3;
+    height: 35px;
+    width: 180px;
+    border-top: 3px solid #4c4c4c;
+    border-bottom: 3px solid #4c4c4c;
+    margin-left: 41px;
+    margin-top: -41px;
+    color: white;
+}
+
+.blueallianceb {
+    background-color: #0066b3;
+    height: 35px;
+    width: 180px;
+    margin-left: 221px;
+    margin-top: -41px;
+    border-right: 3px solid #4c4c4c;
+    border-top: 3px solid #4c4c4c;
+    border-bottom: 3px solid #4c4c4c;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    color: white;
+}
+
+.redalliancef {
+    background-color: #ed1c24;
+    height: 35px;
+    width: 180px;
+    border-top: 3px solid #4c4c4c;
+    border-bottom: 3px solid #4c4c4c;
+    margin-left: 41px;
+    margin-top: -41px;
+    color: white;
+}
+
+.redallianceb {
+    background-color: #ed1c24;
+    height: 35px;
+    width: 180px;
+    margin-left: 221px;
+    margin-top: -41px;
+    border-right: 3px solid #4c4c4c;
+    border-top: 3px solid #4c4c4c;
+    border-bottom: 3px solid #4c4c4c;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    color: white;
+}
+
+.matchteam {
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    margin: 0;
+    padding: 0;
+    width: 60px;
+    text-align: center;
+    margin-top: 8px;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+}
+
 #stream {
     position: absolute;
     right: 25;
